[package]
name = "lebe"
version = "0.5.4"
authors = ["johannesvollmer <contact@johannesvollmer.com> + Utishnik"]
edition = "2018"

description = "Tiny, dead simple, high performance endianness conversions with a generic API"
repository = "https://github.com/Utishnik/lebe_simd"
documentation = "https://docs.rs/crate/lebe/"
readme = "README.md"
license = "BSD-3-Clause"
keywords = ["endianness", "binary", "io", "byteorder", "endian"]
categories = ["encoding", "filesystem", "algorithms"]
rust-version = "1.78.0"

[lib]
path = "src/lib.rs"
test = true
doctest = true
bench = true
doc = true
plugin = false
proc-macro = false

[badges]
maintenance = { status = "actively-developed" }

[features]
simd = []
default = ["simd"]

[dev-dependencies]
bencher = "0.1.4"
byteorder = "1.5.0"

[dependencies]
wide = "1.1.1" #TODO https://github.com/Lokathor/wide/commit/e6ddc6bcdce5507b2d061f6537de4e5a0e18fff0 обновить когда выйдет

[workspace]
members = [
    "cross_simd"
]

[[bench]]
name = "benches"
harness = false

[profile.bench]
lto = true
debug = true

